# wirebus

./: .gitignore  LICENSE  README.md  README.org  pyproject.toml
.github/workflows/: blank.yml
wirebus/: manage.py
wirebus/dashboard/: apps.py  consumer.py  urls.py  views.py
wirebus/static/css/: style.css
wirebus/static/js/: data.js  main.js
wirebus/templates/: base.html  index.html
wirebus/templates/partials/: _header.html
wirebus/wirebus/: asgi.py  celery.py  routing.py  settings.py  urls.py  wsgi.py
