[tool.poetry]
name = "wirebus"
version = "0.1.0"
description = ""
authors = ["taejun-song <songtj10@snu.ac.kr>"]
readme = "README.org"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"
channels = {extras = ["daphne"], version = "^4.0.0"}
celery = "^5.2.7"
django-celery-beat = "^2.4.0"
channels-redis = "^4.0.0"
django-js-lib-ag-grid-community = "^25.3.0"
websocket-client = "^1.4.2"
websockets = "^10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
